Fixed route roles issues and modal on mobile and add google fonts

--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,9 @@
 * {
   padding: 0;
   margin: 0;
+
+  font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
+  /* font-weight: <weight>; */
+  font-style: normal;
 }
